--- a/palmteach/palmWeb/WebContent/download/app/ios/manifest.plist
+++ b/palmteach/palmWeb/WebContent/download/app/ios/manifest.plist
@@ -11,19 +11,31 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://120.26.201.61:8080/palm/download/app/ios/palmteach_ent_v1.0.1.ipa</string>
-				</dict> 
+					<string>http://www.jsksbao.com:8080/palm/download/app/ios/palmteach_ent.ipa</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>display-image</string>
+					<key>url</key>
+					<string>http://www.jsksbao.com:8080/palm/download/app/ios/palmteach_image.57x57.png</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>full-size-image</string>
+					<key>url</key>
+					<string>http://www.jsksbao.com:8080/palm/download/app/ios/palmteach_image.512x512.jpg</string>
+				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
 				<string>com.heimavista.demo.palmteach-ent</string>
 				<key>bundle-version</key>
-				<string>1.0.1</string>
+				<string>1.0.2</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>palmteach_ent</string>
+				<string>教师考试宝</string>
 			</dict>
 		</dict>
 	</array>
